--- a/setup.cfg
+++ b/setup.cfg
@@ -51,7 +51,7 @@ install_requires =
     importlib-metadata; python_version<"3.8"
     whisper
     tqdm
-    ffmpeg
+    ffmpeg-python
     pinecone-client
     fastapi
     pydantic
