Add auto search option

--- a/setup.cfg
+++ b/setup.cfg
@@ -49,13 +49,17 @@ package_dir =
 # For more information, check out https://semver.org/.
 install_requires =
     importlib-metadata; python_version<"3.8"
-    whisper
-    tqdm
-    ffmpeg-python
-    pinecone-client
     fastapi
+    ffmpeg-python
+    numpy
+    pandas
+    pinecone-client
     pydantic
+    python-dotenv
+    scikit-learn
     spotipy
+    tqdm
+    whisper
 
 
 [options.packages.find]
