--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 SPOTIPY_CLIENT_ID=bf7cfd3d0a5f4ef6ab15912c2610d6d4
 SPOTIPY_CLIENT_SECRET=a09a8bf3c73446c0ba6b96b70c457403
-AUDIO_DIR=/media/hr/My Passport/music-dataset/fma_small
-METADATA_DIR=/media/hr/My Passport/music-dataset/fma_metadata
+AUDIO_DIR=fma_small
+METADATA_DIR=fma_metadata
