--- a/setup.cfg
+++ b/setup.cfg
@@ -55,7 +55,10 @@ install_requires =
     pandas
     pinecone-client
     pydantic
+    librosa
     python-dotenv
+    pydot
+    requests
     scikit-learn
     spotipy
     tqdm
