--- a/setup.cfg
+++ b/setup.cfg
@@ -49,7 +49,8 @@ package_dir =
 # For more information, check out https://semver.org/.
 install_requires =
     importlib-metadata; python_version<"3.8"
-    fastapi
+    fastapi>=0.89.1
+    python-multipart
     ffmpeg-python
     numpy
     pandas
