--- a/setup.cfg
+++ b/setup.cfg
@@ -50,16 +50,17 @@ package_dir =
 install_requires =
     importlib-metadata; python_version<"3.8"
     fastapi>=0.89.1
-    python-multipart
     ffmpeg-python
+    librosa
     numpy
     pandas
     pinecone-client
     pydantic
-    librosa
-    python-dotenv
     pydot
+    python-dotenv
+    python-multipart
     requests
+    rich
     scikit-learn
     spotipy
     tqdm
