Return audio path

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ SPOTIPY_CLIENT_ID=bf7cfd3d0a5f4ef6ab15912c2610d6d4
 SPOTIPY_CLIENT_SECRET=a09a8bf3c73446c0ba6b96b70c457403
 METADATA_DIR=app/fma_metadata
 AUDIO_DIR=fma_small
+AUDIO_BASE_URL=.
